Update message in AppConfig.json with group info

--- a/app/src/main/assets/AppConfig.json
+++ b/app/src/main/assets/AppConfig.json
@@ -1,4 +1,4 @@
 {
     "version": "2.3",
-    "message": "Bambu RFID Reader\n标签复制功能将于新年休假结束后上线\n复制需要用的标签数据后期会在群中发布\n作者这里有复制用到的FUID芯片出售,可以提前预定\n微信号:m0h31h31_wx\n祝大家新年快乐,万事如意"
+    "message": "Bambu RFID Reader\n标签复制功能将于新年休假结束后上线\n复制需要用的标签数据后期会在群中发布\n作者这里有复制用到的FUID芯片出售,可以提前预定\n微信号:m0h31h31_wx\nQQ群:1074926713\n祝大家新年快乐,万事如意"
 }
