--- a/app/src/main/assets/AppConfig.json
+++ b/app/src/main/assets/AppConfig.json
@@ -1,4 +1,4 @@
 {
     "version": "2.3",
-    "message": "Bambu RFID Reader"
+    "message": "Bambu RFID Reader\\n标签复制功能将于新年休假结束后上线\\n复制需要用的标签数据将在qq群中发布\\n作者这里有复制用到的FUID芯片出售,可以提前预定\\nQQ群号:1074926713\\n祝大家新年快乐,万事如意"
 }
