Update message in AppConfig.json

--- a/app/src/main/assets/AppConfig.json
+++ b/app/src/main/assets/AppConfig.json
@@ -1,4 +1,4 @@
 {
     "version": "2.5",
-    "message": "Bambu RFID Reader\n标签复制功能即将上线\n复制需要用的标签数据将在qq群中共享\n作者这里有复制用到的FUID芯片出售,可以提前预定\nQQ群号:1074926713\n推荐一个更强大的耗材管理软件 [MW万墨] 微信小程序\n祝大家新年快乐,万事如意"
+    "message": "Bambu RFID Reader\n标签复制功能即将上线\n复制需要用的标签数据将在qq群中共享\n作者这里有复制用到的FUID芯片出售,可以提前预定\nQQ群号:1074926713\n推荐一个更强大的耗材管理软件 [WM万墨] 微信小程序\n祝大家新年快乐,万事如意"
 }
